<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela_detalhes_lead"
    android:layout_marginTop="16dp"


    tools:context=".TelaDetalhesLead"
    >

    <ScrollView
        android:id="@+id/detalhes_lead_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/detalhes_lead_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/detalhes_lead_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_title"
                android:textStyle="bold"
                android:textSize="12pt"
                android:gravity="center"
                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_nome"
                android:textStyle="bold"
                android:textSize="8pt"
                android:gravity="start"
                android:layout_below="@id/detalhes_lead_title"
                android:layout_marginTop="8dp"

                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_escola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_escola"

                android:gravity="start"
                android:layout_below="@id/detalhes_lead_name"
                android:layout_marginTop="8dp"

                >

            </TextView>

            <LinearLayout
                android:id="@+id/detalhes_lead_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detalhes_lead_escola"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dlead_estagio"
                    android:id="@+id/detalhes_lead_estagio"
                    >

                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:id="@+id/detalhes_lead_estagio_edit"
                    >

                </TextView>



                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dlead_prioridade"
                    android:id="@+id/detalhes_lead_prioridade"
                    >

                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:id="@+id/detalhes_lead_prioridade_edit"
                    >

                </TextView>



            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/detalhes_lead_div1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/detalhes_lead_linear"
                >

            </com.google.android.material.divider.MaterialDivider>

            <TextView
                android:id="@+id/detalhes_lead_info_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_informacoes_cont"
                android:layout_marginTop="8dp"
                android:layout_below="@id/detalhes_lead_div1"
                android:textStyle="bold"

                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_resp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_responsavel"
                android:layout_marginTop="8dp"
                android:layout_below="@id/detalhes_lead_info_cont"


                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_resp_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_responsavel"
                android:layout_marginTop="8dp"
                android:layout_below="@id/detalhes_lead_info_cont"
                android:gravity="end"


                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_email"
                android:layout_marginTop="2dp"
                android:layout_below="@id/detalhes_lead_resp"


                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_email"
                android:layout_marginTop="2dp"
                android:layout_below="@id/detalhes_lead_resp"
                android:gravity="end"


                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_tel"
                android:layout_marginTop="2dp"
                android:layout_below="@id/detalhes_lead_email"


                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_tel_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_tel"
                android:layout_marginTop="2dp"
                android:layout_below="@id/detalhes_lead_email"
                android:gravity="end"


                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_interesse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_interesse"
                android:layout_marginTop="2dp"
                android:layout_below="@id/detalhes_lead_tel"


                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_interesse_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_interesse"
                android:layout_marginTop="2dp"
                android:layout_below="@id/detalhes_lead_tel"
                android:gravity="end"


                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_ult_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_ult_cont"
                android:layout_marginTop="2dp"
                android:layout_below="@id/detalhes_lead_interesse"


                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_ult_cont_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_ult_cont"
                android:layout_marginTop="2dp"
                android:layout_below="@id/detalhes_lead_interesse"
                android:gravity="end"


                >

            </TextView>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/detalhes_lead_div2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/detalhes_lead_ult_cont"
                >

            </com.google.android.material.divider.MaterialDivider>

            <TextView
                android:id="@+id/detalhes_lead_bser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_ult_observacoes"
                android:layout_marginTop="8dp"
                android:layout_below="@id/detalhes_lead_div2"
                android:textStyle="bold"


                >

            </TextView>

            <TextView
                android:id="@+id/detalhes_lead_obser_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </TextView>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/detalhes_lead_div3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/detalhes_lead_bser"
                >

            </com.google.android.material.divider.MaterialDivider>

            <TextView
                android:id="@+id/detalhes_lead_hist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_hist"
                android:layout_marginTop="8dp"
                android:layout_below="@id/detalhes_lead_div3"
                android:textStyle="bold"


                >

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detalhes_lead_linear2"
                android:layout_below="@id/detalhes_lead_hist"
                android:orientation="vertical"
                >

            </LinearLayout>





            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/detalhes_lead_div4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/detalhes_lead_linear2"
                >

            </com.google.android.material.divider.MaterialDivider>

            <Button
                android:id="@+id/detalhes_lead_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlead_regist_at"
                android:layout_below="@id/detalhes_lead_div4"
                >

            </Button>



        </RelativeLayout>

    </ScrollView>





    <include layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="25dp"


        />


</RelativeLayout>